INT-feat-40a12.4: Added basic animation to build que. Added option to disable all animation in game

--- a/design/templates/OpenGame/options.tpl.html
+++ b/design/templates/OpenGame/options.tpl.html
@@ -361,6 +361,14 @@
           </th>
         </tr>
 
+        <tr class="c_c">
+          <th colspan="2">
+            <input type="hidden" name="options[{D_PLAYER_OPTION_ANIMATION_DISABLED}]" value="0" />
+            <input type="checkbox" id="animation_disabled" name="options[{D_PLAYER_OPTION_ANIMATION_DISABLED}]" value="1"<!-- IF animation_disabled --> checked<!-- ENDIF --> />
+            <label for="animation_disabled">{L_opt_animation_disabled}</label>
+          </th>
+        </tr>
+
       </table>
     </div>
 
