--- a/design/templates/OpenGame/planet_overview.tpl.html
+++ b/design/templates/OpenGame/planet_overview.tpl.html
@@ -202,7 +202,7 @@
               <!-- IF ques.LENGTH -->
                 <div>{L_sys_total_time}</div>
                 <div id="ov_{ques.ID}_total" style="color: red"></div>
-
+                <div id="ov_{ques.ID}_finish" style="color: yellow"></div>
                 <div id="ov_{ques.ID}"></div>
                 <!-- DEFINE $QUE_ID = '{ques.ID}' -->
                 <!-- INCLUDE eco_queue -->
