--- a/design/templates/OpenGame/_global_header.tpl.html
+++ b/design/templates/OpenGame/_global_header.tpl.html
@@ -44,12 +44,14 @@
       var localTime = new Date();
 
       var SN_SOUND_ENABLED = parseInt('{SOUND_ENABLED}') ? parseInt('{SOUND_ENABLED}') : 0;
+      var PLAYER_OPTION_ANIMATION_DISABLED = parseInt('{PLAYER_OPTION_ANIMATION_DISABLED}') ? parseInt('{PLAYER_OPTION_ANIMATION_DISABLED}') : 0;
       var SN_ROOT_VIRTUAL = '{D_SN_ROOT_VIRTUAL}';
       var sn_path_prefix = '{D_SN_ROOT_VIRTUAL}';
     </script>
 
     <script type="text/javascript" src="{D_SN_ROOT_VIRTUAL}js/lib/jquery.js?{C_var_db_update}"></script>
     <script type="text/javascript">
+      jQuery.fx.off = PLAYER_OPTION_ANIMATION_DISABLED;
       // Корректировка по времени запроса - если доступно
       // var localTime = window.performance ? localTime = new Date(window.performance.timing.requestStart) : new Date();
       // var localTime = window.performance ? localTime = new Date(window.performance.timing.responseStart) : new Date();
