NAVBAR-misc-40a12.6: Now  all message counter now gently pulsing when there are messages

--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -161,7 +161,7 @@
             <a href="messages.php">
               <img style="position: absolute; left: 0px; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_mail_standard.png" width="100%" alt="{L_Message}" title="{L_Message}">
               <div style="position: absolute; right: 0px; bottom: 0px;" class="">
-                <!-- IF TOPNAV_MESSAGES_ALL --><blink>[&nbsp;{TOPNAV_MESSAGES_ALL}&nbsp;]</blink><!-- ELSE -->0<!-- ENDIF -->
+                <!-- IF TOPNAV_MESSAGES_ALL --><span class="blink" duration="2000">[&nbsp;{TOPNAV_MESSAGES_ALL}&nbsp;]</span><!-- ELSE -->0<!-- ENDIF -->
               </div>
             </a>
             <!-- IF TOPNAV_MESSAGES_ADMIN -->
