--- a/design/templates/OpenGame/menu.tpl.html
+++ b/design/templates/OpenGame/menu.tpl.html
@@ -22,9 +22,16 @@
 
   var LEFT_MENU_SHOW_BUTTON_TOP = 7;
   var LEFT_MENU_SHOW_BUTTON_LEFT = 10;
-
-
 </script>
+
+<!-- IF PLAYER_OPTION_MENU_ITEMS_AS_BUTTONS -->
+<style type="text/css">
+  #left_menu {
+    font-size: 150%;
+  }
+</style>
+<!-- ENDIF -->
+
 <!-- IF MENU_CUSTOMIZE -->
   <!-- IF MENU_START_HIDE -->
     <style type="text/css">
@@ -86,69 +93,109 @@
       <!-- DEFINE $TX = 'td' -->
     <!-- ENDIF -->
 
+    <!-- IF menu.CLASS --><!-- DEFINE $MENU_CLASS = ' class="{menu.CLASS}"' --><!-- ELSE --><!-- DEFINE $MENU_CLASS = '' --><!-- ENDIF -->
+    <!-- IF menu.STYLE --><!-- DEFINE $MENU_STYLE = ' style="{menu.STYLE}"' --><!-- ELSE --><!-- DEFINE $MENU_STYLE = '' --><!-- ENDIF -->
+    <!-- IF menu.TITLE -->
+      <!-- DEFINE $MENU_TITLE = 'title="{menu.TITLE}"' -->
+    <!-- ELSEIF menu.ALT -->
+      <!-- DEFINE $MENU_TITLE = 'title="{menu.ALT}"' -->
+    <!-- ELSE -->
+      <!-- DEFINE $MENU_TITLE = '' -->
+    <!-- ENDIF -->
+
+
+
+    <!-- IF menu.ICON -->
+      <!-- DEFINE $MENU_ICON = '<img src="{D_DEFAULT_SKINPATH}icons/{menu.ICON}" class="menu_icon" />' -->
+    <!-- ELSE -->
+      <!-- DEFINE $MENU_ICON = '' -->
+    <!-- ENDIF -->
+
+    <!-- IF menu.ALT -->
+      <!-- DEFINE $ALT_TITLE = 'alt="{menu.ALT}"' -->
+    <!-- ELSEIF menu.TITLE -->
+      <!-- DEFINE $ALT_TITLE = 'alt="{menu.TITLE}"' -->
+    <!-- ELSE -->
+      <!-- DEFINE $ALT_TITLE = '' -->
+    <!-- ENDIF -->
+
+    <!--TODO - REMOVE UNUSED $HEADER_PREFIX-->
     <!-- DEFINE $HEADER_PREFIX = '' -->
     <!-- DEFINE $HEADER_SUFFIX = '' -->
     <!-- IF menu.LINK -->
       <!-- IF menu.LEVEL == 'header' -->
-        <!-- DEFINE $HEADER_PREFIX = '[&nbsp;' -->
-        <!-- DEFINE $HEADER_SUFFIX = '&nbsp;]' -->
+        <!--DEFINE $HEADER_PREFIX = '[&nbsp;' -->
+        <!--DEFINE $HEADER_SUFFIX = '&nbsp;]' -->
       <!-- ENDIF -->
       <!-- IF menu.BLANK -->
         <!-- DEFINE $LINK_BLANK = ' target="_blank"' -->
       <!-- ELSE -->
         <!-- DEFINE $LINK_BLANK = '' -->
       <!-- ENDIF -->
-    <!-- ELSE -->
-      <!-- DEFINE $LINK_CLOSE = '' -->
     <!-- ENDIF -->
+
+
+    <!-- DEFINE $LINK_CLOSE = '' -->
     <tr id="{menu.ID}"
       <!-- IF menu.HIDE && !menu.HIDE_LOCK --> is_hide="1" style="display: none"<!-- ELSEIF menu.HIDE_LOCK --> hide_lock="1"<!-- ENDIF -->
       <!-- IF menu.MOVEABLE && menu.MOVE_LOCK --> move_lock="1"<!-- ENDIF -->
     >
-      <{$TX} nowrap
-        <!-- IF menu.CLASS --> class="{menu.CLASS}"<!-- ENDIF -->
-        <!-- IF menu.TITLE --> title="{menu.TITLE}"<!-- ELSEIF menu.ALT --> title="{menu.ALT}"<!-- ENDIF -->
-        <!-- IF menu.STYLE --> style="{menu.STYLE}"<!-- ENDIF -->
-      >
-
-    <!-- IF menu.WRAP_START -->{menu.WRAP_START}<!-- ENDIF -->
-
-    <!-- IF PLAYER_OPTION_MENU_ITEMS_AS_BUTTONS -->
-      <!-- IF menu.ICON --><img src="{dpath}icons/{menu.ICON}" height="14px" border="0" style="margin-right: 5px;" /><!-- ENDIF -->
-
-      <!-- IF menu.LINK -->
-        <!-- IF menu.TYPE == 'image' -->
-          <a href="{menu.LINK}" class="link"{$LINK_BLANK}>
-          <!-- DEFINE $LINK_CLOSE = '</a>' -->
-        <!-- ELSE -->
-          <input type="button" class="link ui-button ui-widget ui-state-default ui-corner-all ui-textfield" value="{$HEADER_PREFIX}{menu.ITEM}{$HEADER_SUFFIX}" go_url="{menu.LINK}"{$LINK_BLANK} />
-          <!-- DEFINE $LINK_CLOSE = '' -->
-        <!-- ENDIF -->
-      <!-- ENDIF -->
+      <{$TX} nowrap{$MENU_CLASS}{$MENU_STYLE}{$MENU_TITLE}>
+        <!-- IF menu.WRAP_START -->{menu.WRAP_START}<!-- ENDIF -->
+          <!--&lt;!&ndash; IF PLAYER_OPTION_MENU_ITEMS_AS_BUTTONS &ndash;&gt;-->
+            <!--{$MENU_ICON}-->
+            <!--&lt;!&ndash; IF menu.LINK &ndash;&gt;-->
+              <!--&lt;!&ndash; IF menu.TYPE == 'image' &ndash;&gt;-->
+                <!--&lt;!&ndash; DEFINE $LINK_CLOSE = '</a>' &ndash;&gt;-->
+                <!--<a href="{menu.LINK}" class="link"{$LINK_BLANK}>-->
+              <!--&lt;!&ndash; ELSE &ndash;&gt;-->
+                <!--&lt;!&ndash; DEFINE $LINK_CLOSE = '' &ndash;&gt;-->
+                <!--<input type="button" class="link ui-button ui-widget ui-state-default ui-corner-all ui-textfield" value="{$HEADER_PREFIX}{menu.ITEM}{$HEADER_SUFFIX}" go_url="{menu.LINK}"{$LINK_BLANK} />-->
+              <!--&lt;!&ndash; ENDIF &ndash;&gt;-->
+            <!--&lt;!&ndash; ENDIF &ndash;&gt;-->
 
 
-      <!-- IF menu.TYPE == 'image' -->
-        <img border="0" src="{menu.ITEM}" <!-- IF menu.ALT --> alt="{menu.ALT}"<!-- ELSEIF menu.TITLE --> alt="{menu.TITLE}"<!-- ENDIF --> />
-      <!-- ELSEIF ! menu.LINK -->
-        {$HEADER_PREFIX}{menu.ITEM}{$HEADER_SUFFIX}
-      <!-- ENDIF -->
-    <!-- ELSE -->
-      <!-- IF menu.LINK -->
-        <!-- DEFINE $LINK_CLOSE = '</a>' -->
-        <a href="{menu.LINK}" class="link<!-- IF $LINK_BLANK && menu.TYPE != 'image' -->_external<!-- ENDIF -->"{$LINK_BLANK}><!-- ENDIF --><!-- IF menu.ICON --><img src="{dpath}icons/{menu.ICON}" height="14px" border="0" style="margin-right: 5px;" /><!-- ENDIF -->{$HEADER_PREFIX}<!-- IF menu.TYPE == 'image' -->
-            <img border="0" src="{menu.ITEM}"
-              <!-- IF menu.ALT --> alt="{menu.ALT}"<!-- ELSEIF menu.TITLE --> alt="{menu.TITLE}"<!-- ENDIF -->
-            /><!-- ELSE -->{menu.ITEM}<!-- ENDIF -->{$HEADER_SUFFIX}
-      <!-- ENDIF -->
-    {$LINK_CLOSE}
+            <!--&lt;!&ndash; IF menu.TYPE == 'image' &ndash;&gt;-->
+              <!--<img class="left_menu_item_image" border="0" src="{menu.ITEM}" {$ALT_TITLE} />-->
+            <!--&lt;!&ndash; ELSEIF ! menu.LINK &ndash;&gt;-->
+              <!--{$HEADER_PREFIX}{menu.ITEM}{$HEADER_SUFFIX}-->
+            <!--&lt;!&ndash; ENDIF &ndash;&gt;-->
 
-    <!-- IF menu.WRAP_END -->{menu.WRAP_END}<!-- ENDIF -->
+          <!--&lt;!&ndash; ELSE &ndash;&gt;-->
+
+          <!--&lt;!&ndash; ENDIF &ndash;&gt;-->
+
+                  <!-- IF menu.LINK -->
+                  <!-- DEFINE $LINK_CLOSE = '</a>' -->
+                  <a href="{menu.LINK}" {$LINK_BLANK} <!-- IF menu.TYPE == 'image' -->class="lm_with_image"<!-- ENDIF -->>
+                  <!-- ENDIF -->
+                  {$MENU_ICON}
+                  <!-- IF menu.TYPE == 'image' -->
+                  <img style="display: inline-block" border="0" src="{menu.ITEM}" {$ALT_TITLE} />
+                  <!-- ELSE -->
+                  <span<!-- IF menu.LINK --> class="<!-- IF $LINK_BLANK && menu.TYPE != 'image' -->link_external<!-- ELSE -->link_b<!-- ENDIF -->"<!-- ENDIF -->>{$HEADER_PREFIX}{menu.ITEM}{$HEADER_SUFFIX}</span>
+                  <!-- ENDIF -->
+
+              {$LINK_CLOSE}
+        <!-- IF menu.WRAP_END -->{menu.WRAP_END}<!-- ENDIF -->
       </{$TX}>
     </tr>
   <!-- ENDIF -->
   <!-- END menu --></table>
+
+  <!-- IF PLAYER_OPTION_MENU_ITEMS_AS_BUTTONS -->
+  <script type="text/javascript">
+    jQuery("#left_menu input, #left_menu button").addClass('do-not-skin');
+  </script>
+  <!-- ENDIF -->
+  <!-- IF PLAYER_OPTION_MENU_WHITE_TEXT -->
+  <script type="text/javascript">
+    jQuery("#left_menu td a").css('color', 'white');
+  </script>
+  <!-- ENDIF -->
 </td>
-<td valign="top"><!-- IF MENU_CUSTOMIZE --><input type="button" id="left_menu_show" value="{$MENU_START_BUTTON_SHOW}" />  <script type="text/javascript">
+<td valign="top"><!-- IF MENU_CUSTOMIZE --><input type="button" id="left_menu_show" value="{$MENU_START_BUTTON_SHOW}" />
+<script type="text/javascript">
   jQuery(document).ready(function(){
     MENU_HIDDEN ? jQuery('#left_menu').attr('menu_hidden', '1') : (
             // jQuery('#left_menu_show').offset().left < 50 ?
@@ -162,3 +209,4 @@
 </script><!-- ELSE -->&nbsp;<!-- ENDIF --></td>
 <td width="100%" valign="top" align="center"><div style="margin: 0 auto">
 <!-- ENDIF -->
+
