INT-feat-40a13.4: Added options to use narrow menu items - as in previous version of menu

--- a/design/templates/OpenGame/_template.css
+++ b/design/templates/OpenGame/_template.css
@@ -614,20 +614,16 @@ tr[prod_mode] > :not(:first-child) > span:not([style]) { /* Content of empire ce
   padding: 0.25em 0.5em 0.25em 0.5em;
   border: none;
 }
-
 #left_menu th {
   font-size: 1.1em;
 }
-
 #left_menu th a {
   width: 80%;
 }
-
 #left_menu > tbody > tr > td span, #left_menu > tbody > tr > th span {
   display: inline-block;
   vertical-align: top;
 }
-
 #left_menu a:not(.lm_with_image) {
   background-color: rgba(35, 52, 82, 0.5); /*#233452;*/
   padding: 0.2em 1em;
@@ -638,6 +634,27 @@ tr[prod_mode] > :not(:first-child) > span:not([style]) { /* Content of empire ce
   display: inline-block;
 }
 
+#left_menu.old_style td, #left_menu.old_style th {
+  min-height: 1.5em;
+  padding: 0 0.5em;
+  border: 1px solid #415680;
+  border-top: none;
+}
+#left_menu.old_style th a {
+  width: 90%;
+}
+#left_menu.old_style a:not(.lm_with_image) {
+  background-color: rgba(35, 52, 82, 0); /*#233452;*/
+  padding: 0;
+  border: none;
+
+  height: 100%;
+  display: inline-block;
+}
+
+#left_menu.big_buttons {
+
+}
 
 #menu_show_hidden {
   color: yellow;
