--- a/design/templates/OpenGame/eco_queue.tpl.html
+++ b/design/templates/OpenGame/eco_queue.tpl.html
@@ -15,7 +15,7 @@
 <!-- ENDIF -->
 
 <script type="text/javascript"><!--
-sn_timers.unshift({'id': '{$QUE_HTML}_{$QUE_ID}', 'type': 3, 'active': true, 'start_time': {TIME_NOW}, 'options': {
+sn_timers.unshift({'id': '{$QUE_HTML}_{$QUE_ID}', 'type': TIMER_BUILD_QUE_V2, 'options': {
   'msg_done': '{LA_eco_que_empty}',
   // 'url': document.location.href,
   'template': '<div class="que_item {$QUE_HTML}_{$QUE_ID}_container_[UNIT_QUE_PLACE] fl" title="[UNIT_NAME] ([UNIT_LEVEL])">\
