--- a/design/templates/OpenGame/menu.tpl.html
+++ b/design/templates/OpenGame/menu.tpl.html
@@ -1,6 +1,6 @@
 <!-- IF .menu -->
 <script type="text/javascript">
-  sn_timers.unshift({'id': 'menu_admin_server_time', 'type': 4, 'active': true, 'start_time': {TIME_NOW}, 'options': {
+  sn_timers.unshift({'id': 'menu_admin_server_time', 'type': TIMER_CLOCK_REALTIME, 'options': {
     'format': 3,
     'delta': 0
   }});
