--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -269,19 +269,18 @@
     window.location.href = window.location.pathname + pathAdd;
   }
 
-  sn_timers.unshift({'id': 'top_time_server', 'type': 4, 'active': true, 'start_time': {TIME_NOW}, 'options': {
+  sn_timers.unshift({'id': 'top_time_server', 'type': TIMER_CLOCK_REALTIME, 'options': {
     'format': 3,
     'delta': -timeDiff
   }});
 
-//  sn_timers.unshift({'id': 'top_time', 'type': 2, 'active': true, 'start_time': {TIME_NOW}, options: 3});
-  sn_timers.unshift({'id': 'top_time', 'type': 4, 'active': true, 'start_time': {TIME_NOW}, 'options': {
+  sn_timers.unshift({'id': 'top_time', 'type': TIMER_CLOCK_REALTIME, 'options': {
     'format': 3,
     'delta': 0
   }});
 
   <!-- IF .flying_fleets -->
-  sn_timers.unshift({'id': 'topnav_fleet_counter', 'type': 5, 'active': true, 'start_time': {TIME_NOW}, 'options': {
+  sn_timers.unshift({'id': 'topnav_fleet_counter', 'type': TIMER_EVENT_QUE, 'options': {
     'msg_done': '0',
     'changed': true,
     'que': [<!-- BEGIN flying_fleets -->
@@ -291,7 +290,7 @@
   <!-- ENDIF -->
 
   <!-- IF .flying_expeditions -->
-  sn_timers.unshift({'id': 'topnav_expedition_counter', 'type': 5, 'active': true, 'start_time': {TIME_NOW}, 'options': {
+  sn_timers.unshift({'id': 'topnav_expedition_counter', 'type': TIMER_EVENT_QUE, 'options': {
     'msg_done': '0',
     'changed': true,
     'que': [<!-- BEGIN flying_expeditions -->
