--- a/design/templates/OpenGame/_global_footer.tpl.html
+++ b/design/templates/OpenGame/_global_footer.tpl.html
@@ -10,7 +10,7 @@
     <script type="application/javascript">
       document_ready();
       jQuery(document).ready(function () {
-        jQuery('.benchmark').append(', JS run: ' + ((new Date().valueOf() - localTime.valueOf()) / 1000) + 's');
+        jQuery('.benchmark').append(', JS run: ' + ((new Date().valueOf() - timeBrowser.valueOf()) / 1000) + 's');
       });
     </script>
   </body>
