--- a/design/templates/OpenGame/options.tpl.html
+++ b/design/templates/OpenGame/options.tpl.html
@@ -196,7 +196,7 @@
         <!-- IF ! USER_VACATION_DISABLE -->
         <tr title="{L_vacations_tip}">
           <th colspan=2>
-            <!-- IF VACATION_NEXT > TIME_NOW && ! USER_AUTHLEVEL-->
+            <!-- IF VACATION_NEXT > SN_TIME_NOW && ! USER_AUTHLEVEL-->
             {L_opt_vacation_err_timeout}<br />
             {L_opt_vacation_next} {VACATION_NEXT_TEXT}
             <!-- ELSE -->
@@ -414,7 +414,6 @@ $("#tab_container").tabs().show();
 // --></script>
 
 <script type="text/javascript"><!--
-// sn_timers.unshift({id: 'vacation_next', type: 0, active: true, start_time: '{TIME_NOW}', options: {format: 773, delta: '{VACATION_TIMEOUT}'}});
-  sn_timers.unshift({id: 'vacancy_to', type: 4, active: true, start_time: '{TIME_NOW}', options: {format: 3, delta: '{C_player_vacation_time}'}});
-  sn_timers.unshift({id: 'delete_on', type: 4, active: true, start_time: '{TIME_NOW}', options: {format: 3, delta: '{C_player_delete_time}'}});
+  sn_timers.unshift({id: 'vacancy_to', type: TIMER_CLOCK_REALTIME, options: {format: 3, delta: '{C_player_vacation_time}'}});
+  sn_timers.unshift({id: 'delete_on', type: TIMER_CLOCK_REALTIME, options: {format: 3, delta: '{C_player_delete_time}'}});
 // --></script>
