--- a/design/templates/OpenGame/planet_fleet_list.tpl.html
+++ b/design/templates/OpenGame/planet_fleet_list.tpl.html
@@ -95,7 +95,7 @@
     </tr>
 
     <script type="text/javascript"><!--
-      sn_timers.unshift({id: 'ov_fleer_timer_{$OV_FLEET_ACTION}{fleets.ID}', type: 0, active: true, start_time: {TIME_NOW}, options: {
+      sn_timers.unshift({id: 'ov_fleer_timer_{$OV_FLEET_ACTION}{fleets.ID}', type: TIMER_BUILD_QUE_V1, options: {
         msg_done: '{L_sys_fleet_arrived}',
         que: [
           ['{fleets.ID}', '', {fleets.OV_LEFT}, '0']
