--- a/design/templates/OpenGame/planet_resources.tpl.html
+++ b/design/templates/OpenGame/planet_resources.tpl.html
@@ -43,25 +43,25 @@
     </tr>
     <!-- ENDIF -->
 
-<script type="text/javascript"><!--
-  sn_timers.unshift({id: 'top_metal', type: 1, active: true, start_time: {TIME_NOW}, options: {
+<script type="text/javascript">
+  sn_timers.unshift({id: 'top_metal', type: TIMER_COUNTER, options: {
     start_value: {PLANET_METAL},
     per_second: {PLANET_METAL_PERHOUR} / 3600,
     max_value: {PLANET_METAL_MAX},
     round: {RESOURCE_ROUNDING}
   }});
-  sn_timers.unshift({id: 'top_crystal', type: 1, active: true, start_time: {TIME_NOW}, options: {
+  sn_timers.unshift({id: 'top_crystal', type: TIMER_COUNTER, options: {
     start_value: {PLANET_CRYSTAL},
     per_second: {PLANET_CRYSTAL_PERHOUR} / 3600,
     max_value: {PLANET_CRYSTAL_MAX},
     round: {RESOURCE_ROUNDING}}
   });
-  sn_timers.unshift({id: 'top_deuterium', type: 1, active: true, start_time: {TIME_NOW}, options: {
+  sn_timers.unshift({id: 'top_deuterium', type: TIMER_COUNTER, options: {
     start_value: {PLANET_DEUTERIUM},
     per_second: {PLANET_DEUTERIUM_PERHOUR} / 3600,
     max_value: {PLANET_DEUTERIUM_MAX},
     round: {RESOURCE_ROUNDING}
   }});
-// --></script>
+</script>
 
     <!-- planet_resources EOF -->
