--- a/design/templates/OpenGame/market.tpl.html
+++ b/design/templates/OpenGame/market.tpl.html
@@ -1,34 +1,26 @@
 <h2>{L_eco_mrk_title}</h2>
 
-<table width="519px">
-  <tr>
-    <td class="c_l" colspan="2">{L_eco_mrk_description}</td>
-  </tr>
-
-  <tr>
-    <th class="c_l">{L_eco_mrk_service}</th>
-    <th class="c_r">{L_eco_mrk_service_cost}</th>
-  </tr>
-
-  <tr>
-    <td class="c_l"><a href="market.php?mode={D_MARKET_RESOURCES}">{L_eco_mrk_trader}</a></th>
-    <td class="c_r">{C_rpg_cost_trader}&nbsp;{L_sys_dark_matter_sh}</td>
-  </tr>
-  <tr>
-    <td class="c_l"><a href="market.php?mode={D_MARKET_SCRAPPER}">{L_eco_mrk_scraper}</a></td>
-    <td class="c_r">{C_rpg_cost_scraper}&nbsp;{L_sys_dark_matter_sh}</td>
-  </tr>
-  <tr>
-    <td class="c_l"><a href="market.php?mode={D_MARKET_STOCKMAN}">{L_eco_mrk_stockman}</a></td>
-    <td class="c_r">{C_rpg_cost_stockman}&nbsp;{L_sys_dark_matter_sh}</td>
-  </tr>
-  <tr>
-    <td class="c_l"><a href="market.php?mode={D_MARKET_INFO}">{L_eco_mrk_info}</a></td>
-    <td class="c_r">{C_rpg_cost_info}&nbsp;{L_sys_dark_matter_sh}</td>
-  </tr>
+<div class="market_services">
+  <div>{L_eco_mrk_description}</div>
+  <a href="market.php?mode={D_MARKET_RESOURCES}" class="button_pseudo">
+    {L_eco_mrk_trader_do}<br/>
+    {C_rpg_cost_trader}&nbsp;{L_sys_dark_matter_sh}
+  </a>
+  <a href="market.php?mode={D_MARKET_SCRAPPER}" class="button_pseudo">
+    {L_eco_mrk_scraper_do}<br/>
+    {C_rpg_cost_scraper}&nbsp;{L_sys_dark_matter_sh}
+  </a>
+  <a href="market.php?mode={D_MARKET_STOCKMAN}" class="button_pseudo">
+    {L_eco_mrk_stockman_do}<br/>
+    {C_rpg_cost_stockman}&nbsp;{L_sys_dark_matter_sh}
+  </a>
+  <a href="market.php?mode={D_MARKET_INFO}" class="button_pseudo">
+    {L_eco_mrk_info_do}<br/>
+    {C_rpg_cost_info}&nbsp;{L_sys_dark_matter_sh}
+  </a>
+</div>
 <!--
   <tr><th><a href="market.php?mode={D_MARKET_EXCHANGE}">{L_eco_mrk_exchange}</a></th><th>{C_rpg_cost_exchange}&nbsp;{L_sys_dark_matter_sh}</th></tr>
   <tr><th><a href="market.php?mode={D_MARKET_BANKER}">{L_eco_mrk_banker}</a></th><th>{C_rpg_cost_banker}&nbsp;{L_sys_dark_matter_sh}</th></tr>
   <tr><th><a href="market.php?mode={D_MARKET_PAWNSHOP}">{L_eco_mrk_pawnshop}</a></th><th>{C_rpg_cost_pawnshop}&nbsp;{L_sys_dark_matter_sh}</th></tr>
 -->
-</table>
