MARKET-feat-40a13.14: Full redisign of Resource Exchange page

--- a/design/css/global.css
+++ b/design/css/global.css
@@ -292,7 +292,7 @@ table {margin-left: auto; margin-right: auto}
 }
 
 .ok_bg, .success_bg, .positive_bg {
-  background-color: darkgreen;
+  background-color: #004400;
 }
 
 .notice_bg, .zero_bg, .neutral_bg {
