--- a/design/templates/OpenGame/market.tpl.html
+++ b/design/templates/OpenGame/market.tpl.html
@@ -1,3 +1,5 @@
+<script type="text/javascript" src="js/market.js?{C_var_db_update}"></script>
+
 <h2>{L_eco_mrk_title}</h2>
 
 <div class="market_services">
@@ -19,6 +21,9 @@
     {C_rpg_cost_info}&nbsp;{L_sys_dark_matter_sh}
   </a>
 </div>
+
+<script type="text/javascript">
+</script>
 <!--
   <tr><th><a href="market.php?mode={D_MARKET_EXCHANGE}">{L_eco_mrk_exchange}</a></th><th>{C_rpg_cost_exchange}&nbsp;{L_sys_dark_matter_sh}</th></tr>
   <tr><th><a href="market.php?mode={D_MARKET_BANKER}">{L_eco_mrk_banker}</a></th><th>{C_rpg_cost_banker}&nbsp;{L_sys_dark_matter_sh}</th></tr>
