--- a/design/templates/OpenGame/simulator.tpl.html
+++ b/design/templates/OpenGame/simulator.tpl.html
@@ -18,7 +18,8 @@ function sym_set(id, value)
     value = sym_list[id];
   }
 
-  element_cache['attacker' + id].value = value;
+//  element_cache['attacker' + id].value = value;
+  $('#attacker' + id).val(value);
 }
 
 function sym_set_all(group, value)
@@ -35,7 +36,10 @@ function sym_set_all(group, value)
 
 <h2>{COE_combatSimulator}</h2>
 <form action='simulator.php' method='post'>
-{L_ube_simulation} <input type="checkbox" name="simulator" checked="true" />
+<!--
+  Только для тестов
+  {L_ube_simulation} <input type="checkbox" name="simulator" checked="true" />
+-->
 <!--Проверка записи/чтения <input type="checkbox" name="reload" />-->
   <table >
 <!--
